--- a/menu/index.html
+++ b/menu/index.html
@@ -291,10 +291,10 @@
                             <h3>Gambrinus Weisse</h3>
                             <p>Weisse 5,2%</p>
                         </li> -->
-                        <li>
+                        <!-- <li>
                             <h3>MC-77 Sofronia</h3>
                             <p>Blanche con ibisco 5%</p>
-                        </li>
+                        </li> -->
                         <li>
                             <h3>MC-77 Mahlzeit</h3>
                             <p>Altbier rossa 5,5%</p>
@@ -310,6 +310,10 @@
                         <li>
                             <h3>Castelli Mirabilia</h3>
                             <p>American Pale Ale 5,2%</p>
+                        </li>
+                        <li>
+                            <h3>Castelli Brevis Furor</h3>
+                            <p>IPA 6,3%</p>
                         </li>
                         <li>
                             <h3>Mukkeller Hattori Hanzo</h3>
