--- a/menu/index.html
+++ b/menu/index.html
@@ -295,10 +295,10 @@
                             <h3>MC-77 Sofronia</h3>
                             <p>Blanche con ibisco 5%</p>
                         </li> -->
-                        <li>
+                        <!-- <li>
                             <h3>MC-77 Mahlzeit</h3>
                             <p>Altbier rossa 5,5%</p>
-                        </li>
+                        </li> -->
                         <li>
                             <h3>Castelli Palmares</h3>
                             <p>Rossa stile inglese 5,6%</p>
@@ -372,6 +372,10 @@
                                 <p>Doppia IPA 8,3%</p>
                             </li>
                             <li>
+                                <h3>Mariahilfer Antonator 50cl <span class="price">6</span></h3>
+                                <p>Rossa corposa tedesca 7% </p>
+                            </li>
+                            <li>
                                 <h3>Mariahilfer Schwarze 50cl <span class="price">6</span></h3>
                                 <p>Nera tedesca 5,5% </p>
                             </li>
@@ -380,10 +384,10 @@
                                 <h3>Castelli Calix 33cl <span class="price">6</span></h3>
                                 <p>Stout 6,7%</p>
                             </li> -->
-<!--                             <li>
+                            <li>
                                 <h3>Gusswerk Zum Wohl 33cl <span class="price">6</span></h3>
                                 <p>tedesca senza glutine biologica 4,9%</p>
-                            </li> -->
+                            </li>
                         </ul>
                     </div>
                 </div>
