--- a/menu/index.html
+++ b/menu/index.html
@@ -428,7 +428,7 @@
                             <p>Cantina di Tavignano</p>
                         </li>
                         <li>
-                            <h3>Costa Verde DOC <span class="price">12,5 / 3</span></h3>
+                            <h3>Villa Torre DOC <span class="price">12,5 / 3</span></h3>
                             <p>Cantina di Tavignano</p>
                         </li>
                         <li>
@@ -485,10 +485,10 @@
                             <h3>Aranciata <span class="price">3</span></h3>
                             <p>Passarelli 27cl</p>
                         </li>
-                        <!-- <li>
+                        <li>
                             <h3>Succo di Mela <span class="price">3</span></h3>
                             <p>Yoga biologico</p>
-                        </li> -->
+                        </li>
                         <li>
                             <h3>Acqua Tonica <span class="price">3</span></h3>
                             <p>J.Gasco 20cl</p>
