--- a/menu/index.html
+++ b/menu/index.html
@@ -370,7 +370,7 @@
                             <li>
                                 <h3>Mukkeller Marina 50cl <span class="price">6</span></h3>
                                 <p>American pale ale 6,4%</p>
-                            </li> 
+                            </li>
                             <li>
                                 <h3>Mukkeller Hattori Hanzo 50cl <span class="price">6</span></h3>
                                 <p>Doppia IPA 8,3%</p>
@@ -425,11 +425,11 @@
                         </li>
                         <li>
                             <h3>Libenter DOC <span class="price">19</span></h3>
-                            <p>Cantina di Tavignano</p>
+                            <p>Cantina di Tavignano <br>Rosso Piceno DOC</p>
                         </li>
                         <li>
                             <h3>Villa Torre DOC <span class="price">12,5 / 3</span></h3>
-                            <p>Cantina di Tavignano</p>
+                            <p>Cantina di Tavignano <br>Verdicchio dei Castelli di Jesi DOC Classico Superiore</p>
                         </li>
                         <li>
                             <h3>Rosato IGP <span class="price">15</span></h3>
@@ -437,7 +437,7 @@
                         </li>
                         <li>
                             <h3>Misco Superiore DOC <span class="price">18</span></h3>
-                            <p>Cantina di Tavignano</p>
+                            <p>Cantina di Tavignano <br>Verdicchio dei Castelli di Jesi DOC Classico Superiore</p>
                         </li>
                         <!-- <li>
                             <h3>Gewurztraminer DOC <span class="price">18 / 4</span></h3>
