--- a/menu/index.html
+++ b/menu/index.html
@@ -402,11 +402,11 @@
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Rosso Marche IGT <span class="price">Quarto 2,5 / Litro 7,5</span></h3>
-                            <p>Cantina di Tavignano</p>
+                            <p><em>Cantina di Tavignano</em></p>
                         </li>
                         <li>
                             <h3>Verdicchio DOC <span class="price">Quarto 2,5 / Litro 7,5</span></h3>
-                            <p>Cantina di Tavignano</p>
+                            <p><em>Cantina di Tavignano</em></p>
                         </li>
                     </ul>
                 </div>
@@ -417,35 +417,35 @@
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Rosso Piceno DOC <span class="price">11,5 / 3</span></h3>
-                            <p>Cantina Valmusone</p>
+                            <p><em>Cantina Valmusone</em></p>
                         </li>
                         <li>
                             <h3>Lacrima DOC <span class="price">12,5 / 3</span></h3>
-                            <p>Cantina Valmusone</p>
+                            <p><em>Cantina Valmusone</em></p>
                         </li>
                         <li>
                             <h3>Libenter DOC <span class="price">19</span></h3>
-                            <p>Cantina di Tavignano <br>Rosso Piceno DOC</p>
+                            <p><em>Cantina di Tavignano</em> <br>Rosso Piceno DOC</p>
                         </li>
                         <li>
                             <h3>Villa Torre DOC <span class="price">12,5 / 3</span></h3>
-                            <p>Cantina di Tavignano <br>Verdicchio dei Castelli di Jesi DOC Classico Superiore</p>
+                            <p><em>Cantina di Tavignano</em> <br>Verdicchio dei Castelli di Jesi DOC Classico Superiore</p>
                         </li>
                         <li>
                             <h3>Rosato IGP <span class="price">15</span></h3>
-                            <p>Cantina di Tavignano</p>
+                            <p><em>Cantina di Tavignano</em></p>
                         </li>
                         <li>
                             <h3>Misco Superiore DOC <span class="price">18</span></h3>
-                            <p>Cantina di Tavignano <br>Verdicchio dei Castelli di Jesi DOC Classico Superiore</p>
+                            <p><em>Cantina di Tavignano</em> <br>Verdicchio dei Castelli di Jesi DOC Classico Superiore</p>
                         </li>
                         <!-- <li>
                             <h3>Gewurztraminer DOC <span class="price">18 / 4</span></h3>
-                            <p>H.Lun</p>
+                            <p><em>H.Lun</em></p>
                         </li> -->
                         <li>
                             <h3>Prosecco Trèser DOCG <span class="price">15 / 3,5</span></h3>
-                            <p>Cantina Serre di Pederiva</p>
+                            <p><em>Cantina Serre di Pederiva</em></p>
                         </li>
                         <li>
                             <h3>Trento DOCG <span class="price">25</span></h3>
