--- a/menu/index.html
+++ b/menu/index.html
@@ -224,7 +224,7 @@
             </div>
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="subheader">Carni <br></h2>
+                    <h2 class="subheader">Carni</h2>
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Costine <span class="price">13,9</span></h3>
@@ -315,14 +315,14 @@
                             <h3>Castelli Brevis Furor</h3>
                             <p>IPA 6,3%</p>
                         </li>
+                        <!-- <li>
+                            <h3>MC-77 Velvet Suit</h3>
+                            <p>New England IPA 6,5%</p>
+                        </li> -->
                         <li>
                             <h3>Mukkeller Hattori Hanzo</h3>
                             <p>Doppia IPA 8,3%%</p>
                         </li>
-                        <!-- <li>
-                            <h3>MC-77 Italian Farmer </h3>
-                            <p>American Pale Ale 5,8%</p>
-                        </li> -->
                     </ul>
                 </div>
             </div>
@@ -355,14 +355,14 @@
                                 <h3>Mariahilfer Antonator 50cl <span class="price">6</span></h3>
                                 <p>Rossa corposa tedesca 7% </p>
                             </li>
-<!--                             <li>
+                            <!-- <li>
                                 <h3>Gambrinus Zwickel 50cl <span class="price">6</span></h3>
                                 <p>Bionda tedesca non filtrata 4,9%</p>
                             </li> -->
-                            <li>
+                            <!-- <li>
                                 <h3>Mukkeller Nonnukka 50cl <span class="price">6</span></h3>
                                 <p>Ale bionda 4,8%</p>
-                            </li>
+                            </li> -->
                             <!-- <li>
                                 <h3>Mukkeller Wanda 50cl <span class="price">6</span></h3>
                                 <p>Ipa 6,9% </p>
@@ -379,7 +379,7 @@
                                 <h3>Mariahilfer Schwarze 50cl <span class="price">6</span></h3>
                                 <p>Nera tedesca 5,5% </p>
                             </li>
-<!--
+                            <!--
                             <li>
                                 <h3>Castelli Calix 33cl <span class="price">6</span></h3>
                                 <p>Stout 6,7%</p>
@@ -446,6 +446,10 @@
                         <li>
                             <h3>Prosecco Trèser DOCG <span class="price">15 / 3,5</span></h3>
                             <p><em>Cantina Serre di Pederiva</em></p>
+                        </li>
+                        <li>
+                            <h3>Franciacorta Brut DOCG <span class="price">22</span></h3>
+                            <p><em>Cantina La Montina</em></p>
                         </li>
                         <li>
                             <h3>Trento DOCG <span class="price">25</span></h3>
