--- a/menu/index.html
+++ b/menu/index.html
@@ -303,14 +303,18 @@
                             <h3>Castelli Palmares</h3>
                             <p>Rossa stile inglese 5,6%</p>
                         </li>
-                        <!-- <li>
+                        <li>
                             <h3>MC-77 Ape Regina</h3>
                             <p>Blonde ale al miele 6,9%</p>
-                        </li> -->
+                        </li>
                         <li>
                             <h3>Castelli Mirabilia</h3>
                             <p>American Pale Ale 5,2%</p>
                         </li>
+                        <!-- <li>
+                            <h3>Castelli Eccecto Placebo</h3>
+                            <p>IPA Leggera 4%</p>
+                        </li> -->
                         <li>
                             <h3>Castelli Brevis Furor</h3>
                             <p>IPA 6,3%</p>
