--- a/menu/index.html
+++ b/menu/index.html
@@ -258,10 +258,10 @@
                                 <h3>Panna Cotta <span class="price">5</span></h3>
                                 <p>Ai frutti di bosco</p>
                             </li>
-                            <!-- <li>
+                            <li>
                                 <h3>Biscotti Secchi e Visciola <span class="price">5,5</span></h3>
                                 <p>Cantucci e anicetti artigianali, serviti con vino di visciole</p>
-                            </li> -->
+                            </li>
                         </ul>
                         <br>
                     </div>
@@ -452,7 +452,7 @@
                             <p><em>Cantina Serre di Pederiva</em></p>
                         </li>
                         <li>
-                            <h3>Franciacorta Brut DOCG <span class="price">22</span></h3>
+                            <h3>Franciacorta Brut DOCG <span class="price">22 / 5</span></h3>
                             <p><em>Cantina La Montina</em></p>
                         </li>
                         <li>
