--- a/menu/index.html
+++ b/menu/index.html
@@ -312,7 +312,7 @@
                             <p>American Pale Ale 5,2%</p>
                         </li>
                         <!-- <li>
-                            <h3>Castelli Eccecto Placebo</h3>
+                            <h3>Castelli Effecto Placebo</h3>
                             <p>IPA Leggera 4%</p>
                         </li> -->
                         <li>
@@ -457,7 +457,7 @@
                         </li>
                         <li>
                             <h3>Trento DOCG <span class="price">25</span></h3>
-                            <p></p>
+                            <p><em>Madonne delle Vittorie</em></p>
                         </li>
                     </ul>
                 </div>
