--- a/menu/index.html
+++ b/menu/index.html
@@ -308,8 +308,8 @@
                             <p>Blonde ale al miele 6,9%</p>
                         </li>
                         <li>
-                            <h3>Castelli Mirabilia</h3>
-                            <p>American Pale Ale 5,2%</p>
+                            <h3>MC-77 Citrano</h3>
+                            <p>American Pale Ale 5%</p>
                         </li>
                         <!-- <li>
                             <h3>Castelli Effecto Placebo</h3>
