--- a/menu/index.html
+++ b/menu/index.html
@@ -315,12 +315,11 @@
                             <h3>Castelli Effecto Placebo</h3>
                             <p>IPA Leggera 4%</p>
                         </li> -->
-			    <!--
+                        <!--
                         <li>
                             <h3>Castelli Brevis Furor</h3>
                             <p>IPA 6,3%</p>
-                        </li>
--->
+                        </li> -->
                         <li>
                             <h3>MC-77 Velvet Suit</h3>
                             <p>New England IPA 6,5%</p>
@@ -534,6 +533,9 @@
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Varnelli, Sibilla, Tonico <span class="price">3</span></h3>
+                        </li>
+                        <li>
+                            <h3>Anisetta Meletti <span class="price">3</span></h3>
                         </li>
                         <li>
                             <h3>Infuso di Cammomilla, Infuso di Cirmolo, Infuso di Fieno <span class="price">3,5</span></h3>
