--- a/menu/index.html
+++ b/menu/index.html
@@ -551,7 +551,7 @@
                         </li>
 
                         <li>
-                            <h3>Fernet, Brancamenta, Montenegro, Sambuca, Amaro del Capo <span class="price">3</span></h3>
+                            <h3>Fernet, Brancamenta, Montenegro, Amaro del Capo <span class="price">3</span></h3>
                         </li>
                         <li>
                             <h3>Grappa Prime Uve <span class="price">3,5</span></h3>
