--- a/index.html
+++ b/index.html
@@ -92,6 +92,24 @@
 		</div>
 	</header>
 <!-- fine header -->
+	<div class="panel-home-2n">
+		<div class="row">
+			<div class="medium-6 large-6 medium-offset-6 large-offset-6 columns">
+				<h1>Covid</h1>
+			</div>
+		</div>
+		<div class="row">
+			<div class="medium-6 large-6 medium-push-6 large-push-6 columns">
+				<a role="button" href="https://www.beerstrot.it/menu/"><img src="https://www.beerstrot.it/asset/img/medium/covid.jpg" alt="vista drone tavoli larghi" class="extra-space-image-tab-home"></a>
+			</div>
+			<div itemscope itemtype="http://schema.org/Restaurant" class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
+				<p>Prendiamo molto seriamente il nostro lavoro e la nostra responsabilità sociale.</p>
+				<p>Prestiamo tutte le attenzioni possibili all'emergenza sanitaria in corso con un insieme di regole che ci permetteranno di passare una serata rilassata e serena.</p>
+				<p>Per venire a Ca' Vecchia Beerstrot assicuriamoci di leggere e condividere il regolamento Covid</p>
+				<a itemprop="menu" role="button" href="https://www.beerstrot.it/covid/">Regolamento Covid &rarr;</a>
+			</div>
+		</div>
+	</div>
 	<div class="panel-home-n">
 		<!-- <div class="row">
 			<div class="medium-12 large-12 columns panel clearfix">
