--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 		</div>
 		<div class="row">
 			<div class="medium-6 large-6 medium-push-6 large-push-6 columns">
-				<a role="button" href="https://www.beerstrot.it/menu/"><img src="https://www.beerstrot.it/asset/img/medium/covid.jpg" alt="vista drone tavoli larghi" class="extra-space-image-tab-home"></a>
+				<a role="button" href="https://www.beerstrot.it/covid/"><img src="https://www.beerstrot.it/asset/img/medium/covid.jpg" alt="vista drone tavoli larghi" class="extra-space-image-tab-home"></a>
 			</div>
 			<div itemscope itemtype="http://schema.org/Restaurant" class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
 				<p>Prendiamo molto seriamente il nostro lavoro e la nostra responsabilità sociale.</p>
