--- a/menu/index.html
+++ b/menu/index.html
@@ -321,6 +321,10 @@
                             <p>New England IPA 6,5%</p>
                         </li>
                         <li>
+                            <h3>MC-77 Yakima Trip</h3>
+                            <p>American IPA 7%</p>
+                        </li>
+                        <li>
                             <h3>Mukkeller Hattori Hanzo</h3>
                             <p>Doppia IPA 8,3%%</p>
                         </li>
