--- a/menu/index.html
+++ b/menu/index.html
@@ -307,23 +307,22 @@
                             <h3>MC-77 Citrano</h3>
                             <p>American Pale Ale 5%</p>
                         </li>
-                        <!-- <li>
-                            <h3>Castelli Effecto Placebo</h3>
-                            <p>IPA Leggera 4%</p>
-                        </li> -->
-                        <!--
                         <li>
+                            <h3>Castelli Effecto Placebo</h3>
+                            <p>IPA leggera 4%</p>
+                        </li>
+                        <!-- <li>
                             <h3>Castelli Brevis Furor</h3>
                             <p>IPA 6,3%</p>
                         </li> -->
-                        <li>
+                        <!-- <li>
                             <h3>MC-77 Velvet Suit</h3>
                             <p>New England IPA 6,5%</p>
-                        </li>
-                        <!-- <li>
+                        </li> -->
+                        <li>
                             <h3>MC-77 Yakima Trip</h3>
                             <p>American IPA 7%</p>
-                        </li> -->
+                        </li>
                         <li>
                             <h3>Mukkeller Hattori Hanzo</h3>
                             <p>Doppia IPA 8,3%%</p>
