--- a/menu/index.html
+++ b/menu/index.html
@@ -538,7 +538,7 @@
                             <h3>Anisetta Meletti <span class="price">3</span></h3>
                         </li>
                         <li>
-                            <h3>Infuso di Cammomilla, Infuso di Cirmolo, Infuso di Fieno <span class="price">3,5</span></h3>
+                            <h3>Infuso di Cammomilla, Infuso di Fieno <span class="price">3,5</span></h3>
                         </li>
                         <li>
                             <h3>Crema alla Nocciola <span class="price">3</span></h3>
