--- a/menu/index.html
+++ b/menu/index.html
@@ -447,8 +447,8 @@
                             <p><em>H.Lun</em></p>
                         </li>
                         <li>
-                            <h3>Prosecco Trèser DOCG <span class="price">15 / 3,5</span></h3>
-                            <p><em>Cantina Serre di Pederiva</em></p>
+                            <h3>Prosecco Lovre DOCG <span class="price">15 / 3,5</span></h3>
+                            <p><em>Cantina Serre di Pederiva</em> <br>Extra Dry</p>
                         </li>
                         <li>
                             <h3>Franciacorta Brut DOCG <span class="price">22 / 5</span></h3>
