--- a/menu/index.html
+++ b/menu/index.html
@@ -337,10 +337,14 @@
                     <h2 class="subheader">Birre artigianali in bottiglia</h2>
                     <div class="title-divider">
                         <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3">
-                            <!-- <li>
+                            <li>
                                 <h3>Gambrinus Pils 50cl <span class="price">6</span></h3>
                                 <p>Bionda pils 4,9%</p>
-                            </li> -->
+                            </li>
+                            <li>
+                                <h3>Flotzinger Marzen 50cl <span class="price">6</span></h3>
+                                <p>Marzen tedesca 5,6%</p>
+                            </li>
                             <!-- <li>
                                 <h3>Zotler 1447 Naturtrub 50cl <span class="price">6</span></h3>
                                 <p>Marzen tedesca non filtrata 4,9%</p>
