--- a/menu/index.html
+++ b/menu/index.html
@@ -379,10 +379,10 @@
                                 <h3>Mukkeller Marina 50cl <span class="price">6</span></h3>
                                 <p>American pale ale 6,4%</p>
                             </li> -->
-                            <!-- <li>
+                            <li>
                                 <h3>Mukkeller Hattori Hanzo 50cl <span class="price">6</span></h3>
                                 <p>Doppia IPA 8,3%</p>
-                            </li> -->
+                            </li>
                             <li>
                                 <h3>Mariahilfer Schwarze 50cl <span class="price">6</span></h3>
                                 <p>Nera tedesca 5,5% </p>
@@ -390,6 +390,10 @@
                             <li>
                                 <h3>Castelli Calix 33cl <span class="price">6</span></h3>
                                 <p>Stout 6,7%</p>
+                            </li>
+                            <li>
+                                <h3>MC-77 Lu Carzolà 33cl <span class="price">6</span></h3>
+                                <p>Coffee Stout all'anice 8%</p>
                             </li>
                             <!-- <li>
                                 <h3>Gusswerk Zum Wohl 33cl <span class="price">6</span></h3>
