--- a/menu/index.html
+++ b/menu/index.html
@@ -276,62 +276,60 @@
                     <h2 class="subheader">Birre artigianali alla Spina <br><small>Piccola 4 / Media 6 / Caraffa 12</small></h2>
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
-                            <h3>Gambrinus Helles</h3>
-                            <p>Keller non amara 4,9%</p>
+                            <h3>Helles</h3>
+                            <p>Bionda tedesca non amara 4,9% <br><em>Birrificio Gambrinus</em></p>
                         </li>
                         <li>
-                            <h3>Castelli Italicum</h3>
-                            <p>Bionda fruttata 5,0%</p>
+                            <h3>Italicum</h3>
+                            <p>Bionda fruttata 5,0% <br><em>Birrificio dei Castelli</em></p>
                         </li>
                         <!-- <li>
                             <h3>Gambrinus Weisse</h3>
                             <p>Weisse 5,2%</p>
                         </li> -->
-			    <!--
                         <li>
-                            <h3>MC-77 Sofronia</h3>
-                            <p>Blanche con ibisco 5%</p>
+                            <h3>Sofronia</h3>
+                            <p>Blanche con ibisco 5% <br><em>Birrificio MC-77</em></p>
                         </li>
--->
 			    <!--
                         <li>
-                            <h3>MC-77 Mahlzeit</h3>
-                            <p>Altbier rossa 5,5%</p>
+                            <h3>Mahlzeit</h3>
+                            <p>Altbier rossa 5,5% <br><em>Birrificio MC-77</em></p>
                         </li>
 			    -->
                         <li>
-                            <h3>Castelli Palmares</h3>
-                            <p>Rossa stile inglese 5,6%</p>
+                            <h3>Palmares</h3>
+                            <p>Rossa stile inglese 5,6% <br><em>Birrificio dei Castelli</em></p>
                         </li>
                         <!-- <li>
-                            <h3>MC-77 Ape Regina</h3>
-                            <p>Blonde ale al miele 6,9%</p>
+                            <h3>Ape Regina</h3>
+                            <p>Blonde ale al miele 6,9% <br><em>Birrificio MC-77</em></p>
                         </li> -->
                         <!-- <li>
-                            <h3>MC-77 Citrano</h3>
-                            <p>American Pale Ale 5%</p>
+                            <h3>Citrano</h3>
+                            <p>American Pale Ale 5% <br><em>Birrificio MC-77</em></p>
                         </li> -->
                         <li>
-                            <h3>Castelli Effecto Placebo</h3>
-                            <p>IPA leggera 4%</p>
+                            <h3>Effecto Placebo</h3>
+                            <p>IPA fruttata leggera 4% <br><em>Birrificio dei Castelli</em></p>
                         </li>
                         <!-- <li>
-                            <h3>Castelli Brevis Furor</h3>
-                            <p>IPA 6,3%</p>
+                            <h3>Brevis Furor</h3>
+                            <p>IPA 6,3% <br><em>Birrificio dei Castelli</em></p>
                         </li> -->
                         <li>
-                            <h3>MC-77 Velvet Suit</h3>
-                            <p>New England IPA 6,5%</p>
+                            <h3>Velvet Suit</h3>
+                            <p>New England IPA 6,5% <br><em>Birrificio MC-77</em></p>
                         </li>
 			    <!--
                         <li>
-                            <h3>MC-77 Yakima Trip</h3>
-                            <p>American IPA 7%</p>
+                            <h3>Yakima Trip</h3>
+                            <p>American IPA 7% <br><em>Birrificio MC-77</em></p>
                         </li>
 -->
                         <li>
-                            <h3>Mukkeller Hattori Hanzo</h3>
-                            <p>Doppia IPA 8,3%%</p>
+                            <h3> Hattori Hanzo</h3>
+                            <p>Doppia IPA 8,3% <br><em>Birrificio Mukkeller</em></p>
                         </li>
                     </ul>
                 </div>
@@ -342,68 +340,68 @@
                     <div class="title-divider">
                         <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3">
                             <li>
-                                <h3>Gambrinus Pils 50cl <span class="price">6</span></h3>
-                                <p>Bionda pils 4,9%</p>
+                                <h3>Pils 50cl <span class="price">6</span></h3>
+                                <p>Bionda tedesca pils 4,9% <br><em>Birrificio Gambrinus</em></p>
                             </li>
                             <li>
-                                <h3>Flotzinger Marzen 50cl <span class="price">6</span></h3>
-                                <p>Marzen tedesca 5,6%</p>
+                                <h3>Marzen 50cl <span class="price">6</span></h3>
+                                <p>Marzen tedesca 5,6% <br><em>Birrificio Flotzinger</em></p>
                             </li>
                             <!-- <li>
-                                <h3>Zotler 1447 Naturtrub 50cl <span class="price">6</span></h3>
-                                <p>Marzen tedesca non filtrata 4,9%</p>
+                                <h3>1447 Naturtrub 50cl <span class="price">6</span></h3>
+                                <p>Marzen tedesca non filtrata 4,9% <br><em>Birrificio Zotler</em></p>
                             </li> -->
                             <li>
-                                <h3>Hirsch Hellerbock 50cl <span class="price">6</span></h3>
-                                <p>Keller tedesca 6,5%</p>
+                                <h3>Hellerbock 50cl <span class="price">6</span></h3>
+                                <p>Keller tedesca 6,5% <br><em>Birrificio Hirsch</em></p>
                             </li>
                             <li>
-                                <h3>Zotler Weisse 50cl <span class="price">6</span></h3>
-                                <p>Weisse 5,2% </p>
+                                <h3>Weisse 50cl <span class="price">6</span></h3>
+                                <p>Weisse tedesca 5,2% <br><em>Birrificio Zotler</em></p>
                             </li>
                             <li>
-                                <h3>Hirsch Dopple 50cl <span class="price">6</span></h3>
-                                <p>Rossa tedesca 7,2%</p>
+                                <h3>Dopplebock 50cl <span class="price">6</span></h3>
+                                <p>Rossa tedesca 7,2% <br><em>Birrificio Hirsch</em></p>
                             </li>
                             <!-- <li>
-                                <h3>Mariahilfer Antonator 50cl <span class="price">6</span></h3>
-                                <p>Rossa corposa tedesca 7% </p>
+                                <h3>Antonator 50cl <span class="price">6</span></h3>
+                                <p>Rossa corposa tedesca 7% <br><em>Birrificio Mariahilfer</em></p>
                             </li> -->
                             <!-- <li>
-                                <h3>Gambrinus Zwickel 50cl <span class="price">6</span></h3>
-                                <p>Bionda tedesca non filtrata 4,9%</p>
+                                <h3>Zwickel 50cl <span class="price">6</span></h3>
+                                <p>Bionda tedesca non filtrata 4,9% <br><em>Birrificio Gambrinus</em></p>
                             </li> -->
                             <!-- <li>
-                                <h3>Mukkeller Nonnukka 50cl <span class="price">6</span></h3>
-                                <p>Ale bionda 4,8%</p>
+                                <h3>Nonnukka 50cl <span class="price">6</span></h3>
+                                <p>Ale bionda 4,8% <br><em>Birrificio Mukkeller</em></p>
                             </li> -->
                             <!-- <li>
-                                <h3>Mukkeller Wanda 50cl <span class="price">6</span></h3>
-                                <p>Ipa 6,9% </p>
+                                <h3>Wanda 50cl <span class="price">6</span></h3>
+                                <p>Ipa 6,9% <br><em>Birrificio Mukkeller</em></p>
                             </li> -->
                             <!-- <li>
-                                <h3>Mukkeller Marina 50cl <span class="price">6</span></h3>
-                                <p>American pale ale 6,4%</p>
+                                <h3>Marina 50cl <span class="price">6</span></h3>
+                                <p>American pale ale 6,4% <br><em>Birrificio Mukkeller</em></p>
                             </li> -->
                             <li>
-                                <h3>Mukkeller Hattori Hanzo 50cl <span class="price">6</span></h3>
-                                <p>Doppia IPA 8,3%</p>
+                                <h3>Hattori Hanzo 50cl <span class="price">6</span></h3>
+                                <p>Doppia IPA 8,3% <br><em>Birrificio Mukkeller</em></p>
                             </li>
                             <li>
-                                <h3>Mariahilfer Schwarze 50cl <span class="price">6</span></h3>
-                                <p>Nera tedesca 5,5% </p>
+                                <h3>Schwarze Madonna 50cl <span class="price">6</span></h3>
+                                <p>Nera tedesca 5,5% <br><em>Birrificio Mariahilfer</em></p>
                             </li>
                             <li>
-                                <h3>Castelli Calix 33cl <span class="price">6</span></h3>
-                                <p>Stout 6,7%</p>
+                                <h3>Calix 33cl <span class="price">6</span></h3>
+                                <p>Stout 6,7% <br><em>Birrificio dei Castelli</em></p>
                             </li>
                             <li>
-                                <h3>MC-77 Lu Carzolà 33cl <span class="price">6</span></h3>
-                                <p>Coffee Stout all'anice 8%</p>
+                                <h3>Lu Carzolà 33cl <span class="price">6</span></h3>
+                                <p>Coffee stout all'anice 8% <br><em>Birrificio MC-77</em></p>
                             </li>
                             <!-- <li>
-                                <h3>Gusswerk Zum Wohl 33cl <span class="price">6</span></h3>
-                                <p>tedesca senza glutine biologica 4,9%</p>
+                                <h3>Zum Wohl 33cl <span class="price">6</span></h3>
+                                <p>tedesca senza glutine biologica 4,9% <br><em>Birrificio Gusswerk</em></p>
                             </li> -->
                         </ul>
                     </div>
