--- a/menu/index.html
+++ b/menu/index.html
@@ -432,19 +432,19 @@
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Rosso Piceno DOC <span class="price">11,5 / 3</span></h3>
-                            <p><em>Cantina Valmusone</em></p>
+                            <p><em>Cantina di Tavignano</em></p>
                         </li>
                         <li>
                             <h3>Lacrima DOC <span class="price">12,5 / 3</span></h3>
-                            <p><em>Cantina Valmusone</em></p>
+                            <p><em>Cantina di Tavignano</em></p>
                         </li>
                         <li>
                             <h3>Libenter DOC <span class="price">19</span></h3>
-                            <p><em>Cantina di Tavignano</em> <br>Rosso Piceno DOC</p>
+                            <p>Rosso Piceno DOC <br><em>Cantina di Tavignano</em></p>
                         </li>
                         <li>
                             <h3>Villa Torre DOC <span class="price">12,5 / 3</span></h3>
-                            <p><em>Cantina di Tavignano</em> <br>Verdicchio dei Castelli di Jesi DOC Classico Superiore</p>
+                            <p>Verdicchio dei Castelli di Jesi DOC Classico Superiore <br><em>Cantina di Tavignano</em></p>
                         </li>
                         <li>
                             <h3>Rosato IGP <span class="price">15</span></h3>
@@ -452,15 +452,15 @@
                         </li>
                         <li>
                             <h3>Misco Superiore DOC <span class="price">18</span></h3>
-                            <p><em>Cantina di Tavignano</em> <br>Verdicchio dei Castelli di Jesi DOC Classico Superiore</p>
+                            <p>Verdicchio dei Castelli di Jesi DOC Classico Superiore <br><em>Cantina di Tavignano</em></p>
                         </li>
                         <li>
                             <h3>Gewurztraminer DOC <span class="price">18 / 4</span></h3>
-                            <p><em>H.Lun</em></p>
+                            <p><em>Cantina H.Lun</em></p>
                         </li>
                         <li>
                             <h3>Prosecco Lovre DOCG <span class="price">15 / 3,5</span></h3>
-                            <p><em>Cantina Serre di Pederiva</em> <br>Extra Dry</p>
+                            <p>Extra Dry <br><em>Cantina Serre di Pederiva</em></p>
                         </li>
                         <li>
                             <h3>Franciacorta Brut DOCG <span class="price">22 / 5</span></h3>
