--- a/menu/index.html
+++ b/menu/index.html
@@ -315,10 +315,10 @@
                             <h3>Effecto Placebo</h3>
                             <p>IPA fruttata leggera 4% <br><em>Birrificio dei Castelli</em></p>
                         </li>
-                        <!-- <li>
+                        <li>
                             <h3>Brevis Furor</h3>
                             <p>IPA 6,3% <br><em>Birrificio dei Castelli</em></p>
-                        </li> -->
+                        </li>
                         <li>
                             <h3>Velvet Suit</h3>
                             <p>New England IPA 6,5% <br><em>Birrificio MC-77</em></p>
@@ -346,7 +346,7 @@
                                 <p>Bionda tedesca pils 4,9% <br><em>Birrificio Gambrinus</em></p>
                             </li>
                             <li>
-                                <h3>Marzen 50cl <span class="price">6</span></h3>
+                                <h3>Rosenheimer Marzen 50cl <span class="price">6</span></h3>
                                 <p>Marzen tedesca 5,6% <br><em>Birrificio Flotzinger</em></p>
                             </li>
                             <!-- <li>
