--- a/menu/index.html
+++ b/menu/index.html
@@ -362,9 +362,17 @@
                                 <p>Weisse tedesca 5,2% <br><em>Birrificio Zotler</em></p>
                             </li>
                             <li>
+                                <h3>Neuottinger Dunkel 50cl <span class="price">6</span></h3>
+                                <p>Rossa tedesca 5,3% <br><em>Birrificio Mullerbrau</em></p>
+                            </li>
+                            <li>
+                                <h3>Bockser 50cl <span class="price">6</span></h3>
+                                <p>Rossa tedesca 8,2% <br><em>Birrificio Mullerbrau</em></p>
+                            </li>
+                            <!-- <li>
                                 <h3>Dopplebock 50cl <span class="price">6</span></h3>
                                 <p>Rossa tedesca 7,2% <br><em>Birrificio Hirsch</em></p>
-                            </li>
+                            </li> -->
                             <!-- <li>
                                 <h3>Antonator 50cl <span class="price">6</span></h3>
                                 <p>Rossa corposa tedesca 7% <br><em>Birrificio Mariahilfer</em></p>
@@ -403,7 +411,7 @@
                             </li>
                             <li>
                                 <h3>Zum Wohl 33cl <span class="price">6</span></h3>
-                                <p>tedesca senza glutine biologica 4,9% <br><em>Birrificio Gusswerk</em></p>
+                                <p>Lager senza glutine biologica 4,9% <br><em>Birrificio Gusswerk</em></p>
                             </li>
                         </ul>
                     </div>
