--- a/menu/index.html
+++ b/menu/index.html
@@ -315,9 +315,14 @@
                             <p>IPA fruttata leggera 4% <br><em>Birrificio dei Castelli</em></p>
                         </li>
 -->
-                        <li>
+                      <!--  <li>
                             <h3>Brevis Furor</h3>
                             <p>IPA 6,3% <br><em>Birrificio dei Castelli</em></p>
+                        </li>
+-->
+			<li>
+                            <h3>Mazzu de Fiuri</h3>
+                            <p>IPA 6,5% <br><em>Birrificio Mukkeller</em></p>
                         </li>
                         <li>
                             <h3>Velvet Suit</h3>
