--- a/asporto/index.html
+++ b/asporto/index.html
@@ -60,7 +60,7 @@
                 <li class="divider"></li>
                 <li><a href="https://www.beerstrot.it/menu/">Menù</a></li>
                 <li class="divider"></li>
-                <li><a href="https://www.beerstrot.it/asporto/">Asporto e Consegne</a></li>
+                <li><a href="https://www.beerstrot.it/asporto/">Asporto</a></li>
                 <li class="divider"></li>
                 <li><a href="https://www.beerstrot.it/social/">Social</a></li>
                 <li class="divider"></li>
@@ -87,15 +87,15 @@
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
-                <p><strong>Tutti i giorni</strong>.<br>Dalle <strong>19:00</strong> alle <strong>22:00</strong></p>
+                <p><strong>Dal Mercoledì alla Domenica</strong>.<br>Dalle <strong>19:00</strong> alle <strong>22:00</strong></p>
                 <!-- <h4><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</h4>
                 <h4><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></h4> -->
                 <!-- <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071 8853384</a></span> -->
             </div>
-            <div class="medium-6 large-6 columns">
+           <!--  <div class="medium-6 large-6 columns">
                 <span class="show-for-small"><br></span>
                 <h4>Il Servizio di <strong>Consegna a Domicilio</strong> riprenderà a Settembre</h4>
-            </div>
+            </div> -->
         </div>
         <div class="row">
             <div class="medium-12 large-12 columns">
@@ -296,10 +296,10 @@
 					</li>
 		  			<li>
                         <h4 class="subheader">Orari</h4>
-                        <meta itemprop="openingHours" content="Mo, Tu, We, Th, Fr, Sa, Su 19:00-23:00">
+                        <meta itemprop="openingHours" content="We, Th, Fr, Sa, Su 19:00-23:00">
                         <div class="row">
                             <div class="large-12 medium-12 small-12 columns">
-                                <p>Tutti i Giorni <br>Dalle 19:00 alle 23:00</p>
+                                <p>Dal Mercoledì alla Domenica <br>Dalle 19:00 alle 23:00</p>
                             </div>
                         </div>
                     </li>
@@ -363,7 +363,7 @@
             <p class="links">
                 <a href="https://www.beerstrot.it">Home</a>
                 <a href="https://www.beerstrot.it/menu/">Menù</a>
-                <a href="https://www.beerstrot.it/asporto/">Asporto e Consegne</a>
+                <a href="https://www.beerstrot.it/asporto/">Asporto</a>
                 <a href="https://www.beerstrot.it/social/">Social</a>
                 <a href="https://www.beerstrot.it/contatti/">Contatti</a>
                 <a href="https://www.beerstrot.it/blog/">Blog</a>
