--- a/eventi/index.html
+++ b/eventi/index.html
@@ -49,7 +49,7 @@
                 <li class="divider"></li>
                 <li><a href="https://www.beerstrot.it/menu/">Menù</a></li>
                 <li class="divider"></li>
-                <li><a href="https://www.beerstrot.it/asporto/">Asporto e Consegne</a></li>
+                <li><a href="https://www.beerstrot.it/asporto/">Asporto</a></li>
                 <li class="divider"></li>
                 <li><a href="https://www.beerstrot.it/social/">Social</a></li>
                 <li class="divider"></li>
@@ -340,10 +340,10 @@
 					</li>
 		  			<li>
                         <h4 class="subheader">Orari</h4>
-                        <meta itemprop="openingHours" content="Mo, Tu, We, Th, Fr, Sa, Su 19:00-23:00">
+                        <meta itemprop="openingHours" content="We, Th, Fr, Sa, Su 19:00-23:00">
                         <div class="row">
                             <div class="large-12 medium-12 small-12 columns">
-                                <p>Tutti i Giorni <br>Dalle 19:00 alle 23:00</p>
+                                <p>Dal Mercoledì alla Domenica <br>Dalle 19:00 alle 23:00</p>
                             </div>
                         </div>
                     </li>
@@ -407,7 +407,7 @@
             <p class="links">
                 <a href="https://www.beerstrot.it">Home</a>
                 <a href="https://www.beerstrot.it/menu/">Menù</a>
-                <a href="https://www.beerstrot.it/asporto/">Asporto e Consegne</a>
+                <a href="https://www.beerstrot.it/asporto/">Asporto</a>
                 <a href="https://www.beerstrot.it/social/">Social</a>
                 <a href="https://www.beerstrot.it/contatti/">Contatti</a>
                 <a href="https://www.beerstrot.it/blog/">Blog</a>
