--- a/menu/birra/ape-regina.html
+++ b/menu/birra/ape-regina.html
@@ -45,7 +45,7 @@
                 <li class="divider"></li>
                 <li class="active"><a href="https://www.beerstrot.it/menu/">Menù</a></li>
                 <li class="divider"></li>
-                <li><a href="https://www.beerstrot.it/asporto/">Asporto e Consegne</a></li>
+                <li><a href="https://www.beerstrot.it/asporto/">Asporto</a></li>
                 <li class="divider"></li>
                 <li><a href="https://www.beerstrot.it/eventi/">Eventi</a></li>
                 <li class="divider"></li>
@@ -201,7 +201,7 @@
             <p class="links">
                 <a href="https://www.beerstrot.it">Home</a>
                 <a href="https://www.beerstrot.it/menu/">Menù</a>
-                <a href="https://www.beerstrot.it/asporto/">Asporto e Consegne</a>
+                <a href="https://www.beerstrot.it/asporto/">Asporto</a>
                 <a href="https://www.beerstrot.it/social/">Social</a>
                 <a href="https://www.beerstrot.it/contatti/">Contatti</a>
                 <a href="https://www.beerstrot.it/blog/">Blog</a>
