--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 			<div class="medium-6 large-6 columns">
 				<span class="show-for-small extra-space"></span>
 				<h2>Asporto</h2>
-				<p>Dal Meercoledì alla Domenica<br>Dalle 19:00 alle 22:00</p>
+				<p>Dal Mercoledì alla Domenica<br>Dalle 19:00 alle 22:00</p>
 				<!-- <p>Il servizio di consegna a domicilio riprenderà dal 15 Ottobre</p> -->
 				<!-- <p><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</p> -->
 				<!-- <p><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></p> -->
