--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 	<div class="panel-home-n">
 		<div class="row">
 			<div class="medium-6 large-6 columns">
-				<h1>Asporto e Consegne</h1>
+				<h1>Asporto</h1>
 			</div>
 		</div>
 		<div class="row">
