--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 			<div class="medium-6 large-6 columns">
 				<p>Non hai voglia di cucinare? Stai guardando la partita da solo o con gli amici e hai voglia di mettere qualcosa sotto i denti?</p>
 				<p>Abbiamo un menù anche per questo.</p>
-				<a role="button" href="https://www.beerstrot.it/asporto/">Scopri il Menù Asporto e Consegne &rarr;</a>
+				<a role="button" href="https://www.beerstrot.it/asporto/">Scopri il Menù d'Asporto &rarr;</a>
 			</div>
 		</div>
 	</div>
