--- a/menu/index.html
+++ b/menu/index.html
@@ -287,16 +287,14 @@
                             <h3>Gambrinus Weisse</h3>
                             <p>Weisse 5,2%</p>
                         </li> -->
-                        <li>
+                        <!-- <li>
                             <h3>Sofronia</h3>
                             <p>Blanche con ibisco 5% <br><em>Birrificio MC-77</em></p>
-                        </li>
-			    <!--
-                        <li>
+                        </li> -->
+                        <!-- <li>
                             <h3>Mahlzeit</h3>
                             <p>Altbier rossa 5,5% <br><em>Birrificio MC-77</em></p>
-                        </li>
-			    -->
+                        </li> -->
                         <li>
                             <h3>Palmares</h3>
                             <p>Rossa stile inglese 5,6% <br><em>Birrificio dei Castelli</em></p>
@@ -309,18 +307,19 @@
                             <h3>Citrano</h3>
                             <p>American Pale Ale 5% <br><em>Birrificio MC-77</em></p>
                         </li> -->
-			    <!--
-                        <li>
+                        <!-- <li>
                             <h3>Effecto Placebo</h3>
                             <p>IPA fruttata leggera 4% <br><em>Birrificio dei Castelli</em></p>
+                        </li> -->
+                        <li>
+                            <h3>Mirabilia</h3>
+                            <p>American Pale Ale 5,2% <br><em>Birrificio dei Castelli</em></p>
                         </li>
--->
-                      <!--  <li>
+                        <!-- <li>
                             <h3>Brevis Furor</h3>
                             <p>IPA 6,3% <br><em>Birrificio dei Castelli</em></p>
-                        </li>
--->
-			<li>
+                        </li> -->
+			             <li>
                             <h3>Mazzu de Fiuri</h3>
                             <p>IPA 6,5% <br><em>Birrificio Mukkeller</em></p>
                         </li>
@@ -328,12 +327,10 @@
                             <h3>Velvet Suit</h3>
                             <p>New England IPA 6,5% <br><em>Birrificio MC-77</em></p>
                         </li>
-			    <!--
-                        <li>
+                        <!-- <li>
                             <h3>Yakima Trip</h3>
                             <p>American IPA 7% <br><em>Birrificio MC-77</em></p>
-                        </li>
--->
+                        </li> -->
                         <li>
                             <h3>Hattori Hanzo</h3>
                             <p>Doppia IPA 8,3% <br><em>Birrificio Mukkeller</em></p>
