--- a/menu/index.html
+++ b/menu/index.html
@@ -449,11 +449,11 @@
                     <h2 class="subheader">Vino Bottiglia / Calice</h2>
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
-                            <h3>Cervidoni<span class="price">11,5 / 3</span></h3>
+                            <h3>Cervidoni DOC <span class="price">11,5 / 3</span></h3>
                             <p>Rosso Piceno DOC <br><em>Cantina di Tavignano</em></p>
                         </li>
                         <li>
-                            <h3>Barbarossa <span class="price">12,5 / 3</span></h3>
+                            <h3>Barbarossa DOC <span class="price">12,5 / 3</span></h3>
                             <p>Lacrima di Morro D'Alba DOC <em>Cantina di Tavignano</em></p>
                         </li>
                         <li>
