--- a/menu/index.html
+++ b/menu/index.html
@@ -454,7 +454,7 @@
                         </li>
                         <li>
                             <h3>Barbarossa DOC <span class="price">12,5 / 3</span></h3>
-                            <p>Lacrima di Morro D'Alba DOC <em>Cantina di Tavignano</em></p>
+                            <p>Lacrima di Morro D'Alba DOC <br><em>Cantina di Tavignano</em></p>
                         </li>
                         <li>
                             <h3>Libenter DOC <span class="price">19</span></h3>
