--- a/menu/index.html
+++ b/menu/index.html
@@ -450,23 +450,23 @@
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Cervidoni DOC <span class="price">11,5 / 3</span></h3>
-                            <p>Rosso Piceno DOC <br><em>Cantina di Tavignano</em></p>
+                            <p>Rosso Piceno <br><em>Cantina di Tavignano</em></p>
                         </li>
                         <li>
                             <h3>Barbarossa DOC <span class="price">12,5 / 3</span></h3>
-                            <p>Lacrima di Morro D'Alba DOC <br><em>Cantina di Tavignano</em></p>
+                            <p>Lacrima di Morro D'Alba <br><em>Cantina di Tavignano</em></p>
                         </li>
                         <li>
                             <h3>Libenter DOC <span class="price">19</span></h3>
-                            <p>Rosso Piceno DOC <br><em>Cantina di Tavignano</em></p>
+                            <p>Rosso Piceno <br><em>Cantina di Tavignano</em></p>
                         </li>
                         <li>
                             <h3>Villa Torre DOC <span class="price">12,5 / 3</span></h3>
-                            <p>Verdicchio dei Castelli di Jesi DOC Classico Superiore <br><em>Cantina di Tavignano</em></p>
+                            <p>Verdicchio dei Castelli di Jesi Classico Superiore <br><em>Cantina di Tavignano</em></p>
                         </li>
                         <li>
                             <h3>Misco Superiore DOC <span class="price">18</span></h3>
-                            <p>Verdicchio dei Castelli di Jesi DOC Classico Superiore <br><em>Cantina di Tavignano</em></p>
+                            <p>Verdicchio dei Castelli di Jesi Classico Superiore <br><em>Cantina di Tavignano</em></p>
                         </li>
                         <li>
                             <h3>Gewurztraminer DOC <span class="price">18 / 4</span></h3>
