--- a/menu/index.html
+++ b/menu/index.html
@@ -325,10 +325,14 @@
                             <h3>Mazzu de Fiuri</h3>
                             <p>IPA 6,5% <br><em>Birrificio Mukkeller</em></p>
                         </li>
-                        <li>
+                        <!-- <li>
+                            <h3>Billicock</h3>
+                            <p>Doppia New England IPA 7,8% <br><em>Birrificio MC-77</em></p>
+                        </li> -->
+                        <!-- <li>
                             <h3>Velvet Suit</h3>
                             <p>New England IPA 6,5% <br><em>Birrificio MC-77</em></p>
-                        </li>
+                        </li> -->
                         <!-- <li>
                             <h3>Yakima Trip</h3>
                             <p>American IPA 7% <br><em>Birrificio MC-77</em></p>
@@ -345,10 +349,10 @@
                     <h2 class="subheader">Birre artigianali in bottiglia</h2>
                     <div class="title-divider">
                         <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3">
-                            <li>
+                            <!-- <li>
                                 <h3>Pils 50cl <span class="price">6</span></h3>
                                 <p>Bionda tedesca pils 4,9% <br><em>Birrificio Gambrinus</em></p>
-                            </li>
+                            </li> -->
                             <li>
                                 <h3>Rosenheimer Marzen 50cl <span class="price">6</span></h3>
                                 <p>Marzen tedesca 5,6% <br><em>Birrificio Flotzinger</em></p>
