--- a/menu/index.html
+++ b/menu/index.html
@@ -123,12 +123,10 @@
                             <h3>Peperoncini Piccanti <span class="price">5,5</span></h3>
                             <p>Peperoncini ripieni di robiola avvolti nella pancetta</p>
                         </li>
-			    <!--
                         <li>
                             <h3>Olive all'Ascolana <span class="price">5,5</span></h3>
                             <p>Il più tipico street food marchigiano</p>
                         </li>
-                           -->
                         <li>
                             <h3>Mozzarelle Fritte <span class="price">5,9</span></h3>
                             <p>Servite con salsa aioli fatta in casa</p>
@@ -326,7 +324,7 @@
                             <p>IPA 6,5% <br><em>Birrificio Mukkeller</em></p>
                         </li>
                         <!-- <li>
-                            <h3>Billicock</h3>
+                            <h3>Billycock</h3>
                             <p>Doppia New England IPA 7,8% <br><em>Birrificio MC-77</em></p>
                         </li> -->
                         <!-- <li>
