--- a/menu/index.html
+++ b/menu/index.html
@@ -361,10 +361,12 @@
                                 <h3>1447 Naturtrub 50cl <span class="price">6</span></h3>
                                 <p>Marzen tedesca non filtrata 4,9% <br><em>Birrificio Zotler</em></p>
                             </li> -->
+				<!--
                             <li>
                                 <h3>Hellerbock 50cl <span class="price">6</span></h3>
                                 <p>Keller tedesca 6,5% <br><em>Birrificio Hirsch</em></p>
                             </li>
+-->
                             <li>
                                 <h3>Weisse 50cl <span class="price">6</span></h3>
                                 <p>Weisse tedesca 5,2% <br><em>Birrificio Zotler</em></p>
@@ -566,7 +568,7 @@
                             <h3>Anisetta Meletti <span class="price">3</span></h3>
                         </li>
                         <li>
-                            <h3>Infuso di Cammomilla, Infuso di Fieno <span class="price">3,5</span></h3>
+                            <h3>Infuso di Cammomilla <span class="price">3,5</span></h3>
                         </li>
                         <li>
                             <h3>Amaro Marzadro <span class="price">3,5</span></h3>
