--- a/menu/index.html
+++ b/menu/index.html
@@ -315,10 +315,10 @@
                             <h3>Mirabilia</h3>
                             <p>American Pale Ale 5,2% <br><em>Birrificio dei Castelli</em></p>
                         </li>
-                        <!-- <li>
+                        <li>
                             <h3>Brevis Furor</h3>
                             <p>IPA 6,3% <br><em>Birrificio dei Castelli</em></p>
-                        </li> -->
+                        </li>
 			    <!--
 		        <li>
                             <h3>Mazzu de Fiuri</h3>
@@ -486,10 +486,10 @@
                             <h3>Prosecco Lovre DOCG <span class="price">15 / 3,5</span></h3>
                             <p>Extra Dry <br><em>Cantina Serre di Pederiva</em></p>
                         </li>
-                        <li>
+                        <!-- <li>
                             <h3>Franciacorta Brut DOCG <span class="price">22 / 5</span></h3>
                             <p><em>Cantina La Montina</em></p>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
@@ -574,7 +574,7 @@
                             <h3>Amaro Marzadro <span class="price">3,5</span></h3>
                         </li>
                         <li>
-                            <h3>Fernet, Brancamenta, Montenegro, Amaro del Capo <span class="price">3</span></h3>
+                            <h3>Fernet Branca, Brancamenta, Montenegro, Amaro del Capo <span class="price">3</span></h3>
                         </li>
                         <li>
                             <h3>Grappa Prime Uve <span class="price">3,5</span></h3>
