--- a/asporto/index.html
+++ b/asporto/index.html
@@ -87,7 +87,7 @@
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
-                <p><strong>Dal Mercoledì alla Domenica</strong>.<br>Dalle <strong>19:00</strong> alle <strong>22:00</strong></p>
+                <p><strong>Dal Giovedì alla Domenica</strong>.<br>Dalle <strong>19:00</strong> alle <strong>22:00</strong></p>
                 <!-- <h4><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</h4>
                 <h4><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></h4> -->
                 <!-- <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071 8853384</a></span> -->
@@ -296,10 +296,10 @@
 					</li>
 		  			<li>
                         <h4 class="subheader">Orari</h4>
-                        <meta itemprop="openingHours" content="We, Th, Fr, Sa, Su 19:00-23:00">
+                        <meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
                         <div class="row">
                             <div class="large-12 medium-12 small-12 columns">
-                                <p>Dal Mercoledì alla Domenica <br>Dalle 19:00 alle 23:00</p>
+                                <p>Dal Giovedì alla Domenica <br>Dalle 19:00 alle 23:00</p>
                             </div>
                         </div>
                     </li>
