--- a/index.html
+++ b/index.html
@@ -125,14 +125,14 @@
 		<div class="row">
 			<div class="medium-6 large-6 columns">
 				<h2>Ristorante <small>(Prenotazione obbligatoria)</small></h2>
-				<p>Aperto dal Mercoledì alla Domenica solo all'esterno <br>Dalle 19:00 alle 23:00</p>
+				<p>Aperto dal Giovedì alla Domenica <br>Dalle 19:00 alle 23:00</p>
                 <span class="hide-for-small extra-space"><a role="button" href="tel:+390718853384" class="button left"><i class="fab fa fa-phone"></i> 071 885 3384</a></span>
                 <span class="show-for-small extra-space"><a role="button" href="tel:+390718853384" class="button small left extra-space-from-tabs"><i class="fa fa-phone"></i> Prenota</a></span>
 			</div>
 			<div class="medium-6 large-6 columns">
 				<span class="show-for-small extra-space"></span>
 				<h2>Asporto</h2>
-				<p>Dal Mercoledì alla Domenica<br>Dalle 19:00 alle 22:00</p>
+				<p>Dal Giovedì alla Domenica<br>Dalle 19:00 alle 22:00</p>
 				<!-- <p>Il servizio di consegna a domicilio riprenderà dal 15 Ottobre</p> -->
 				<!-- <p><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</p> -->
 				<!-- <p><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></p> -->
@@ -255,10 +255,10 @@
 					</li>
 					<li>
                         <h4 class="subheader">Orari</h4>
-                        <meta itemprop="openingHours" content="We, Th, Fr, Sa, Su 19:00-23:00">
+                        <meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
                         <div class="row">
                             <div class="large-12 medium-12 small-12 columns">
-                                <p>Dal Mercoledì alla Domenica <br>Dalle 19:00 alle 23:00</p>
+                                <p>Dal Giovedì alla Domenica <br>Dalle 19:00 alle 23:00</p>
                             </div>
                         </div>
                     </li>
