--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<a href="#"><span></span></a>
 			</li>
 		</ul>
-		<section class="top-bar-section" onclick="void(0)>
+		<section class="top-bar-section">
 			<ul class="right">
 				<li class="divider"></li>
 				<li><a href="https://www.beerstrot.it/menu/">Menù</a></li>
