--- a/asporto/index.html
+++ b/asporto/index.html
@@ -52,7 +52,7 @@
                  <h2><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h2>
             </li>
             <li class="toggle-topbar menu-icon">
-                <a href="#"><span></span></a>
+                <a href="#"><span>Menù</span></a>
             </li>
         </ul>
         <section class="top-bar-section">
