--- a/menu/index.html
+++ b/menu/index.html
@@ -193,17 +193,29 @@
                             <p>Maiale sfilacciato, coleslow, cetriolini, insalata riccia, salsa piccante</p>
                         </li>
                         <li>
+                            <h3>Autunno <span class="price">10,5 / doppio 14,9</span></h3>
+                            <p>Manzo, scamorza affumicata, crema di funghi, speck croccante</p>
+                        </li>
+                        <li>
+                            <h3>Cacio e Pepe <span class="price">10,5 / doppio 14,9</span></h3>
+                            <p>Manzo, pecorino vallesina, guanciale, pepe</p>
+                        </li>
+                        <li>
+                            <h3>Mantovano <span class="price">10,5 / doppio 14,9</span></h3>
+                            <p>Manzo, gorgonzola, crema di zucca, Aaaretto, speck Croccante</p>
+                        </li>
+                        <!-- <li>
                             <h3>Estivo <span class="price">10,5 / doppio 14,9</span></h3>
                             <p>Manzo, mozzarella di bufala, pomodoro fresco, pesto di basilico e pinoli</p>
-                        </li>
+                        </li> -->
                         <li>
                             <h3>Carbonara <span class="price">10,9 / doppio 14,9</span></h3>
                             <p>Manzo, guanciale, crema di uovo, pecorino romano e pepe</p>
                         </li>
-                        <li>
+                        <!-- <li>
                             <h3>Greco <span class="price">9,5 / doppio 14,9</span></h3>
                             <p>Manzo, melanzana grigliata, insalata riccia, salsa tzatziki</p>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
@@ -234,6 +246,10 @@
                             <h3>Tagliata di Picanha <span class="price">19</span></h3>
                             <p>350 grammi di picanha di manzo. Servita su letto di rucola</p>
                         </li>
+                        <li>
+                            <h3>Cotoletta alla Milanese <span class="price">21</span></h3>
+                            <p>Costoletta di vitello con osso impanata e cotta nel burro chiarificato. Servita con insalata e patatine</p>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -253,6 +269,10 @@
                             <li>
                                 <h3>Cheesecake <span class="price">5</span></h3>
                                 <p>Cheescake in stile new york. Squisitamente dolce, morbida e leggermente acidula</p>
+                            </li>
+                            <li>
+                                <h3>Blondie <span class="price">5</span></h3>
+                                <p>Brownie con nocciole. Servito con mousse di crema chantilly</p>
                             </li>
                             <li>
                                 <h3>Biscotti Secchi e Visciola <span class="price">5,5</span></h3>
