--- a/menu/index.html
+++ b/menu/index.html
@@ -202,7 +202,7 @@
                         </li>
                         <li>
                             <h3>Mantovano <span class="price">10,5 / doppio 14,9</span></h3>
-                            <p>Manzo, gorgonzola, crema di zucca, Aaaretto, speck Croccante</p>
+                            <p>Manzo, gorgonzola, crema di zucca, Amaretto, speck croccante</p>
                         </li>
                         <!-- <li>
                             <h3>Estivo <span class="price">10,5 / doppio 14,9</span></h3>
