update hamburger menu

--- a/eventi/index.html
+++ b/eventi/index.html
@@ -41,7 +41,7 @@
                  <h1><a href="https://www.beerstrot.it"><img class="img-logo" src="https://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h1>
             </li>
             <li class="toggle-topbar">
-				<i class="fa fa-bars extra-space-hamburger"></i>
+				<i class="fas fa-bars extra-space-hamburger"></i>
 				<a href="#"><span></span></a>
 			</li>
         </ul>
