--- a/menu/index.html
+++ b/menu/index.html
@@ -367,7 +367,7 @@
                         <!-- <li>
                             <h3>Breaking Hops</h3>
                             <p>Doppia IPA 7,2% <br><em>Birrificio MC-77</em></p>
-                        </li -->>
+                        </li> -->
                         <li>
                             <h3>Hattori Hanzo</h3>
                             <p>Doppia IPA 8,3% <br><em>Birrificio Mukkeller</em></p>
@@ -380,7 +380,7 @@
                     <h2 class="subheader">Birre artigianali in bottiglia</h2>
                     <div class="title-divider">
                         <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3">
-                           <li>
+                            <li>
                                 <h3>Pils 50cl <span class="price">6</span></h3>
                                 <p>Bionda tedesca pils 4,9% <br><em>Birrificio Gambrinus</em></p>
                             </li>
@@ -427,6 +427,10 @@
                             <!-- <li>
                                 <h3>Wanda 50cl <span class="price">6</span></h3>
                                 <p>Ipa 6,9% <br><em>Birrificio Mukkeller</em></p>
+                            </li> -->
+                            <!-- <li>
+                                <h3>Tulio 50cl <span class="price">6</span></h3>
+                                <p>Rye IPA 6,5% <br><em>Birrificio Mukkeller</em></p>
                             </li> -->
                             <!-- <li>
                                 <h3>Marina 50cl <span class="price">6</span></h3>
