--- a/asporto/index.html
+++ b/asporto/index.html
@@ -258,18 +258,18 @@
                 </div>
             </div>
             <div class="row">
-                <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="subheader">Dolci<br><small>Fatti in casa</small></h2>
+                 <div class="large-12 medium-12 small-12 columns">
+                   <!-- <h2 class="subheader">Dolci<br><small>Fatti in casa</small></h2>
                     <div class="title-divider">
-                        <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3">
+                        <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3"> -->
                             <!-- <li>
                                 <h3>Crumble <span class="price">5</span></h3>
                                 <p>Crema chantilly su croccante crumble di farina di mais, cannella e scaglie di cioccolato fondente</p>
                             </li> -->
-                            <li>
+                            <!-- <li>
                                 <h3>Cioccolatosa <span class="price">5</span></h3>
                                 <p>Doppio cremoso al cioccolato su pan di spagna al cioccolato</p>
-                            </li>
+                            </li> -->
                             <!-- <li>
                                 <h3>Cheesecake <span class="price">5</span></h3>
                                 <p>Cheescake in stile new york. Squisitamente dolce, morbida e leggermente acidula</p>
@@ -278,13 +278,13 @@
                                 <h3>Birramisù <span class="price">5</span></h3>
                                 <p>Tiramisù con mascarpone artigianale alla birra stout</p>
                             </li> -->
-                            <li>
+                            <!-- <li>
                                 <h3>Blondie <span class="price">5</span></h3>
                                 <p>Brownie con nocciole. Servito con crema al mascarpone e rhum</p>
-                            </li>
-                        </ul>
+                            </li> -->
+                        <!-- </ul>
                         <br>
-                    </div>
+                    </div> -->
                     <div class="title-divider">
                         <p class="">I prodotti subiscono un processo di abbattimento della temperatura per preservarne le caratteristiche organolettiche. <br><br>I prodotti contengono allergeni: chiedi al personale.</p>
                         <br>
