--- a/menu/index.html
+++ b/menu/index.html
@@ -385,6 +385,10 @@
                                 <p>Bionda tedesca pils 4,9% <br><em>Birrificio Gambrinus</em></p>
                             </li>
                             <li>
+                                <h3>Mupils 50cl <span class="price">6</span></h3>
+                                <p>Pils 5,2% <br><em>Birrificio Mukkeller</em></p>
+                            </li>
+                            <li>
                                 <h3>Rosenheimer Marzen 50cl <span class="price">6</span></h3>
                                 <p>Marzen tedesca 5,6% <br><em>Birrificio Flotzinger</em></p>
                             </li>
@@ -424,22 +428,22 @@
                                 <h3>Nonnukka 50cl <span class="price">6</span></h3>
                                 <p>Ale bionda 4,8% <br><em>Birrificio Mukkeller</em></p>
                             </li> -->
-                            <!-- <li>
+                            <li>
                                 <h3>Wanda 50cl <span class="price">6</span></h3>
                                 <p>Ipa 6,9% <br><em>Birrificio Mukkeller</em></p>
-                            </li> -->
-                            <!-- <li>
+                            </li>
+                            <li>
                                 <h3>Tulio 50cl <span class="price">6</span></h3>
                                 <p>Rye IPA 6,5% <br><em>Birrificio Mukkeller</em></p>
-                            </li> -->
+                            </li>
                             <!-- <li>
                                 <h3>Marina 50cl <span class="price">6</span></h3>
                                 <p>American pale ale 6,4% <br><em>Birrificio Mukkeller</em></p>
                             </li> -->
-                           <!-- <li>
+                           <li>
                                 <h3>Hattori Hanzo 50cl <span class="price">6</span></h3>
                                 <p>Doppia IPA 8,3% <br><em>Birrificio Mukkeller</em></p>
-                            </li> -->
+                            </li>
                             <!-- <li>
                                 <h3>Schwarze Madonna 50cl <span class="price">6</span></h3>
                                 <p>Nera tedesca 5,5% <br><em>Birrificio Mariahilfer</em></p>
